--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,9 @@ android {
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName '1.0.0'
     }
+
     buildTypes {
         release {
             minifyEnabled false
