--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/MyCustomTheme">
 
         <activity
-            android:name=".feature.home.HomeActivity"
+            android:name=".ui.home.HomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask">
 
@@ -36,10 +36,10 @@
         </activity>
 
         <activity
-            android:name=".feature.addbutton.AddButtonActivity"
+            android:name=".ui.addbutton.AddButtonActivity"
             android:label="@string/addbutton_activity_label"
             android:launchMode="singleTask"
-            android:parentActivityName=".feature.home.HomeActivity"
+            android:parentActivityName=".ui.home.HomeActivity"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
