--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+
+        // Monits repository, for their static code analysis plugin. Actually this is only required because of a bug:
+        // > Could not resolve com.monits:android-linters:1.3.0.
+        //  > Could not parse POM https://jcenter.bintray.com/com/monits/android-linters/1.3.0/android-linters-1.3.0.pom
+        //   > Could not find com.monits:java-pom:2.0-SNAPSHOT.
+        // 1.3.0 (release) depends on 2.0-SNAPSHOT (snapshot :P)
+        maven {
+            url 'http://nexus.monits.com/content/repositories/oss-releases'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
