--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,21 @@
-apply plugin: 'com.android.application'
-apply plugin: 'com.getkeepsafe.dexcount'
-apply plugin: 'com.jakewharton.hugo'
+apply plugin:'com.android.application'
+apply plugin:'com.getkeepsafe.dexcount'
+apply plugin:'com.jakewharton.hugo'
 apply plugin:'com.monits.staticCodeAnalysis'
 
 android {
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "com.github.barriosnahuel.vossosunboton"
         minSdkVersion 18
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName '1.0.0'
     }
@@ -34,7 +34,7 @@ android {
 
 staticCodeAnalysis {
     findbugs = false
-    checkstyle = true
+    checkstyle = false // Disabled because it throws: "* What went wrong: Could not determine the dependencies of task ':app:checkstyleDebug'.  > Resolving configuration 'debugApk' directly is not allowed"
     pmd = true
     cpd = true
     androidLint = true
@@ -45,29 +45,22 @@ staticCodeAnalysis {
 }
 
 dependencies {
-    def supportLibrariesVersion = '24.2.1'
-    compile "com.android.support:support-v4:$supportLibrariesVersion"
-    compile "com.android.support:appcompat-v7:$supportLibrariesVersion"
-    compile "com.android.support:recyclerview-v7:$supportLibrariesVersion"
+    def supportLibrariesVersion = '26.0.1'
+    implementation "com.android.support:support-v4:$supportLibrariesVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibrariesVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibrariesVersion"
 
-    compile 'com.jakewharton.timber:timber:4.3.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
 
-    androidLint 'com.monits:android-linters:1.3.0'
+    //androidLint 'com.monits:android-linters:1.3.0'
 
-    def stethoVersion = '1.4.1'
-    debugCompile("com.facebook.stetho:stetho:$stethoVersion") {
-        // Excluded because we couldn't apply dex-count plugin. ClassNotFoundException can be thrown when using Stetho
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    }
-    // stetho-js-rhino lets you make things like https://github.com/facebook/stetho/tree/master/stetho-js-rhino#example
-    debugCompile("com.facebook.stetho:stetho-js-rhino:$stethoVersion") {
+    def stethoVersion = '1.5.0'
+    debugImplementation("com.facebook.stetho:stetho:$stethoVersion") {
         // Excluded because we couldn't apply dex-count plugin. ClassNotFoundException can be thrown when using Stetho
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    debugImplementation 'com.nshmura:strictmode-notifier:0.9.3'
 
-    debugCompile 'com.nshmura:strictmode-notifier:0.9.3'
-
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
