--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,12 @@
 buildscript {
     repositories {
         jcenter()
-
-        // Monits repository, for their static code analysis plugin. Actually this is only required because of a bug:
-        // > Could not resolve com.monits:android-linters:1.3.0.
-        //  > Could not parse POM https://jcenter.bintray.com/com/monits/android-linters/1.3.0/android-linters-1.3.0.pom
-        //   > Could not find com.monits:java-pom:2.0-SNAPSHOT.
-        // 1.3.0 (release) depends on 2.0-SNAPSHOT (snapshot :P)
-        maven {
-            url 'http://nexus.monits.com/content/repositories/oss-snapshots'
-        }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.monits:static-code-analysis-plugin:2.3.3'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.1'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta2'
+        classpath 'com.monits:static-code-analysis-plugin:2.5.0'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,22 +17,14 @@ buildscript {
 }
 
 wrapper {
-    gradleVersion = '3.1'
+    gradleVersion = '4.1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
 allprojects {
     repositories {
         jcenter()
-
-        // Monits repository, for their static code analysis plugin. Actually this is only required because of a bug:
-        // > Could not resolve com.monits:android-linters:1.3.0.
-        //  > Could not parse POM https://jcenter.bintray.com/com/monits/android-linters/1.3.0/android-linters-1.3.0.pom
-        //   > Could not find com.monits:java-pom:2.0-SNAPSHOT.
-        // 1.3.0 (release) depends on 2.0-SNAPSHOT (snapshot :P)
-        maven {
-            url 'http://nexus.monits.com/content/repositories/oss-snapshots'
-        }
+        google()
     }
 }
 
