--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,10 @@ dependencies:
   override:
     - echo y | android update sdk --no-ui --all --filter tools
     - echo y | android update sdk --no-ui --all --filter platform-tools
-    - echo y | android update sdk --no-ui --all --filter build-tools-24.0.3
-    - echo y | android update sdk --no-ui --all --filter android-24
+    - echo y | android update sdk --no-ui --all --filter build-tools-26.0.1
+    - echo y | android update sdk --no-ui --all --filter android-26
     - echo y | android update sdk --no-ui --all --filter extra-android-m2repository
-    - ./gradlew dependencies
+    - ./gradlew -q dependencies
 
 test:
   override:
