--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,30 @@ android {
         versionName '1.1.0'
     }
 
+    signingConfigs {
+        release {
+
+            File keystoreFile = file('../nahuelbarrios.keystore')
+            File propertiesFile = file("../secure.properties")
+            if (keystoreFile.exists() && propertiesFile.exists()) {
+                logger.warn('#### INFO: Release keystore will be used ####')
+                Properties properties = new Properties()
+                properties.load(new FileInputStream())
+
+                keyAlias properties.getProperty('key.alias')
+                keyPassword properties.getProperty('key.password')
+                storeFile keystoreFile
+                storePassword properties.getProperty('store.password')
+            } else {
+                logger.warn('#### WARNING: Neither release keystore nor the secure properties were found. Debug keystore will be used ####')
+                keyAlias "androiddebugkey"
+                keyPassword "android"
+                storeFile file("../debug_keystore.keystore")
+                storePassword "android"
+            }
+        }
+    }
+
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
@@ -28,6 +52,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -57,7 +82,7 @@ dependencies {
     def stethoVersion = '1.5.0'
     debugImplementation("com.facebook.stetho:stetho:$stethoVersion") {
         // Excluded because we couldn't apply dex-count plugin. ClassNotFoundException can be thrown when using Stetho
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+        exclude group:'com.google.code.findbugs', module:'jsr305'
     }
 
     debugImplementation 'com.nshmura:strictmode-notifier:0.9.3'
