--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta2'
-        classpath 'com.monits:static-code-analysis-plugin:2.5.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.monits:static-code-analysis-plugin:2.6.10'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
 
@@ -17,7 +17,7 @@ buildscript {
 }
 
 wrapper {
-    gradleVersion = '4.1'
+    gradleVersion = '5.5'
     distributionType = Wrapper.DistributionType.ALL
 }
 
