--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin:'com.android.application'
-//apply plugin:'com.getkeepsafe.dexcount'
+apply plugin:'com.getkeepsafe.dexcount'
 apply plugin:'com.jakewharton.hugo'
 apply plugin:'com.monits.staticCodeAnalysis'
 
