--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,10 +70,9 @@ staticCodeAnalysis {
 }
 
 dependencies {
-    def supportLibrariesVersion = '28.0.0'
-    implementation "com.android.support:support-v4:$supportLibrariesVersion"
-    implementation "com.android.support:appcompat-v7:$supportLibrariesVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibrariesVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.jakewharton.timber:timber:4.5.1'
 
