--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,21 @@ jobs:
   "test":
     executor: android/android
     steps:
+      - run: android/build
       - run:
           name: "Run Tests"
           command: ./gradlew app:test
   "code-analysis":
     executor: android/android
     steps:
+      - run: android/build
       - run:
           name: "Run Code Analysis"
           command: ./gradlew app:check -x test
   "build":
     executor: android/android
     steps:
+      - run: android/build
       - run:
           name: "Run Code Analysis"
           command: ./gradlew app:build -x check
