Add check and build steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,14 @@ jobs:
   "code-analysis":
     executor: android/android
     steps:
+      - checkout
       - run:
           name: "Run Code Analysis"
           command: ./gradlew app:check -x test
   "build":
     executor: android/android
     steps:
+      - checkout
       - run:
           name: "Run Code Analysis"
           command: ./gradlew app:build -x check
@@ -26,5 +28,5 @@ workflows:
   "Check, Test & Build Workflow":
     jobs:
       - test
-#      - code-analysis
-#      - build
+      - code-analysis
+      - build
