--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,18 +14,21 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Run Code Analysis"
+          name: "Run Code Analyzers"
           command: ./gradlew app:check -x test
+      - run:
+          name: "Run Vital Release Checks"
+          command: ./gradlew app:lintVitalRelease
   "build":
     executor: android/android
     steps:
       - checkout
       - run:
-          name: "Run Code Analysis"
-          command: ./gradlew app:build -x check
+          name: "Run App Build"
+          command: ./gradlew app:build -x check -x lintVitalRelease
 workflows:
   version: 2.1
-  "Check, Test & Build Workflow":
+  "Pull Requests Workflow":
     jobs:
       - test
       - code-analysis
