--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin:'com.android.application'
 apply plugin:'com.getkeepsafe.dexcount'
 apply plugin:'com.jakewharton.hugo'
 apply plugin:'com.monits.staticCodeAnalysis'
+apply plugin:'io.fabric'
 
 android {
     compileOptions {
@@ -75,6 +76,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
