--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin:'com.getkeepsafe.dexcount'
 apply plugin:'com.jakewharton.hugo'
 apply plugin:'com.monits.staticCodeAnalysis'
 apply plugin:'io.fabric'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileOptions {
@@ -75,8 +76,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-perf:18.0.1'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
