--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.github.barriosnahuel.vossosunboton"
-          xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.github.barriosnahuel.vossosunboton">
 
     <application
         android:name=".DebugApplication"
-        tools:replace="android:name"/>
+        tools:replace="android:name">
+        <meta-data
+            android:name="firebase_performance_logcat_enabled"
+            android:value="true" />
+    </application>
 
 </manifest>
