--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.0'
         classpath 'io.fabric.tools:gradle:1.30.0'
+        classpath 'com.google.firebase:perf-plugin:1.3.0'
 
         classpath 'com.monits:static-code-analysis-plugin:2.6.10'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.6'
