--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41'
 
         classpath 'com.monits:static-code-analysis-plugin:2.6.10'
+        classpath 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0-RC16'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.6'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
 
