--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'io.gitlab.arturbosch.detekt'
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
     implementation 'androidx.annotation:annotation:1.0.0'
+}
+
+detekt {
+    config = files("../config/detekt/detekt-config.yml")
 }
 
 sourceCompatibility = "8"
