--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,14 @@ jobs:
       - checkout
       - run:
           name: "Run Tests"
-          command: ./gradlew app:test
+          command: ./gradlew test
   "code-analysis":
     executor: android/android
     steps:
       - checkout
       - run:
           name: "Run Code Analyzers"
-          command: ./gradlew app:check -x test
+          command: ./gradlew check -x test
       - run:
           name: "Run Vital Release Checks"
           command: ./gradlew app:lintVitalRelease
