--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'io.gitlab.arturbosch.detekt'
+apply from: '../ktlint.gradle'
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.41'
