--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'io.gitlab.arturbosch.detekt'
 apply from: '../ktlint.gradle'
@@ -12,5 +11,5 @@ detekt {
     config = files("../config/detekt/detekt-config.yml")
 }
 
-sourceCompatibility = "8"
-targetCompatibility = "8"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
