--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/MyCustomTheme">
+        android:theme="@style/feature_base_MyCustomTheme">
 
         <activity
             android:name=".ui.home.HomeActivity"
