Simplify build type Application's behaviour; Debug tools migration to Kotlin

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.barriosnahuel.vossosunboton">
 
-    <application
-        android:name=".DebugApplication"
-        tools:replace="android:name">
+    <application>
         <meta-data
             android:name="firebase_performance_logcat_enabled"
             android:value="true" />
