--- a/feature_addbutton/build.gradle
+++ b/feature_addbutton/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.monits.staticCodeAnalysis'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.gitlab.arturbosch.detekt'
+apply from: '../ktlint.gradle'
 
 android {
     compileSdkVersion 29
@@ -31,11 +35,19 @@ staticCodeAnalysis {
     androidLintConfig = "$project.rootProject.projectDir/config/android/android-lint-app.xml"
 }
 
+detekt {
+    config = files("../config/detekt/detekt-config.yml")
+}
+
 dependencies {
     implementation project(':feature_base')
     implementation project(':commons_android')
     implementation project(':commons_file')
     implementation project(':model')
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
