--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ android {
     }
 }
 
+jacoco {
+    toolVersion = '0.8.5'
+}
+
 staticCodeAnalysis {
     findbugs = false
     checkstyle = true
