--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,15 @@ android {
         }
     }
 
-    testOptions.unitTests.all {
-        testLogging {
-            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+
+            all {
+                testLogging {
+                    events 'passed', 'failed'
+                }
+            }
         }
     }
 
@@ -109,8 +115,12 @@ dependencies {
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
 
     testImplementation 'junit:junit:4.12'
+
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+
     testImplementation 'com.google.truth:truth:1.0'
-    testImplementation 'org.mockito:mockito-core:3.1.0'
+    testImplementation 'io.mockk:mockk:1.9.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
