App: Add a factory for PlayerController

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
 
             all {
                 testLogging {
-                    events 'passed', 'failed'
+                    events 'PASSED', 'FAILED'
                 }
             }
         }
