Setup code minify and shrinking for release builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,8 @@ android {
         }
 
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
