Skip Leak Canary upgrade check in favor of project stability

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,8 @@ dependencies {
 
     debugImplementation 'androidx.multidex:multidex:2.0.1'
 
+    // Skipped because it's a major change and I have to make changes to use v2.x. Task added to Trello.
+    // noinspection NewerVersionAvailable
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
 
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
