--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   android: circleci/android@0.2.0
-#  codecov: codecov/codecov@1.0.5
+  codecov: codecov/codecov@1.0.6
 jobs:
   "test":
     executor: android/android
@@ -10,10 +10,14 @@ jobs:
       - run:
           name: "Run Tests"
           command: ./gradlew test
-#      - codecov/upload:
-#          file: "app/build/jacoco/testDebugUnitTest.exec"
-#      - codecov/upload:
-#          file: "app/build/jacoco/testReleaseUnitTest.exec"
+      - codecov/upload:
+          file: "app/build/jacoco/testDebugUnitTest.exec"
+      - codecov/upload:
+          file: "app/build/jacoco/testReleaseUnitTest.exec"
+      - store_artifacts:
+          path: "app/build/reports/tests/"
+      - store_artifacts:
+          path: "app/build/reports/jacoco/"
   "code-analysis":
     executor: android/android
     steps:
@@ -24,6 +28,14 @@ jobs:
       - run:
           name: "Run Vital Release Checks"
           command: ./gradlew app:lintVitalRelease
+      - store_artifacts:
+          path: "app/build/reports/checkstyle/"
+      - store_artifacts:
+          path: "app/build/reports/pmd/"
+      - store_artifacts:
+          path: "app/build/reports/lint-results.html"
+      - store_artifacts:
+          path: "app/build/reports/detekt/detekt.html"
   "build":
     executor: android/android
     steps:
