--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: "Run Tests"
-          command: ./gradlew test
+          command: ./gradlew test jacocoTestReport
       - codecov/upload:
           file: "app/build/jacoco/testDebugUnitTest.exec"
       - codecov/upload:
@@ -17,7 +17,9 @@ jobs:
       - store_artifacts:
           path: "app/build/reports/tests/"
       - store_artifacts:
-          path: "app/build/reports/jacoco/"
+          path: "app/build/reports/jacoco/jacocoTestDebugUnitTestReport/html/index.html"
+      - store_artifacts:
+          path: "app/build/reports/jacoco/jacocoTestReleaseUnitTestReport/html/index.html"
   "code-analysis":
     executor: android/android
     steps:
