--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: "Run Tests"
-          command: ./gradlew test jacocoTestReport
+          command: ./gradlew testDebugUnitTest jacocoTestReport
       - codecov/upload:
           file: "app/build/jacoco/testDebugUnitTest.exec"
       - codecov/upload:
