--- a/feature_base/build.gradle
+++ b/feature_base/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.monits.staticCodeAnalysis'
+apply from: '../linters.gradle'
 
 android {
     compileSdkVersion 29
@@ -17,18 +17,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-}
-
-staticCodeAnalysis {
-    findbugs = false
-    checkstyle = true
-    pmd = true
-    cpd = true
-    androidLint = true
-
-    ignoreErrors = false
-
-    androidLintConfig = "$project.rootProject.projectDir/config/android/android-lint-app.xml"
 }
 
 dependencies {
