--- a/commons_file/build.gradle
+++ b/commons_file/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply from: '../linters.gradle'
+apply from: "$project.rootProject.projectDir/linters.gradle"
 
 android {
     compileSdkVersion 29
