--- a/feature_addbutton/build.gradle
+++ b/feature_addbutton/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply from: '../linters.gradle'
+apply from: "$project.rootProject.projectDir/linters.gradle"
 
 android {
     compileSdkVersion 29
