Migrate feature_addbutton to a dynamic feature (also, android-jacoco is removed because it's incompatible with the dynamic feature plugin)

--- a/feature_addbutton/src/main/AndroidManifest.xml
+++ b/feature_addbutton/src/main/AndroidManifest.xml
@@ -1,12 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.github.barriosnahuel.vossosunboton.feature.addbutton">
+
+    <dist:module
+        dist:instant="false"
+        dist:title="@string/app_feature_addbutton_feature_name_dynamic_feature">
+        <dist:delivery>
+            <dist:install-time />
+        </dist:delivery>
+        <dist:fusing dist:include="true" />
+    </dist:module>
 
     <application>
         <activity
             android:name="com.github.barriosnahuel.vossosunboton.feature.addbutton.AddButtonActivity"
-            android:label="@string/feature_addbutton_activity_label"
+            android:label="@string/app_feature_addbutton_activity_label_dynamic_feature"
             android:launchMode="singleTask"
-            android:parentActivityName=".ui.home.HomeActivity"
+            android:parentActivityName="com.github.barriosnahuel.vossosunboton.ui.home.HomeActivity"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
