--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,9 @@ jobs:
       - checkout
       - run:
           name: "Run Tests"
-          command: ./gradlew test jacocoTestReport
-      - codecov/upload:
-          file: "app/build/jacoco/testDebugUnitTest.exec"
-      - codecov/upload:
-          file: "app/build/jacoco/testReleaseUnitTest.exec"
+          command: ./gradlew test
       - store_artifacts:
           path: "app/build/reports/tests/"
-      - store_artifacts:
-          path: "app/build/reports/jacoco/"
   "code-analysis":
     executor: android/android
     steps:
