--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     signingConfigs {
         release {
 
-            File keystoreFile = file('../nahuelbarrios.keystore')
+            File keystoreFile = file('../nahuelbarrios.keystore-appbundle.pkcs12')
             File propertiesFile = file("../secure.properties")
             if (keystoreFile.exists() && propertiesFile.exists()) {
                 logger.warn('WARNING: Release keystore will be used for this build.')
@@ -55,10 +55,6 @@ android {
                 testLogging {
                     events 'PASSED', 'FAILED'
                 }
-
-                jacoco {
-                    includeNoLocationClasses = true
-                }
             }
         }
     }
@@ -72,20 +68,22 @@ android {
 
         release {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
+    dynamicFeatures = [":feature_addbutton"]
+
 }
 
 dependencies {
     implementation project(':commons_file')
     implementation project(':commons_android')
     implementation project(':feature_base')
-    implementation project(':feature_addbutton')
     implementation project(':model')
 
+    implementation 'com.google.android.play:core:1.6.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -95,8 +93,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:19.0.5'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
-    debugImplementation 'androidx.multidex:multidex:2.0.1'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
