--- a/feature_addbutton/build.gradle
+++ b/feature_addbutton/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.dynamic-feature'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply from: "$project.rootProject.projectDir/linters.gradle"
@@ -12,16 +12,10 @@ android {
     }
 
     resourcePrefix 'feature_addbutton_'
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
 }
 
 dependencies {
+    implementation project(':app')
     implementation project(':feature_base')
     implementation project(':commons_android')
     implementation project(':commons_file')
