--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,11 @@ android {
         applicationId "com.github.barriosnahuel.vossosunboton"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 4
+        versionCode 5
         versionName '2.0.0'
     }
+
+    resourcePrefix 'app_'
 
     signingConfigs {
         release {
